spacing issues and colors

--- a/css/home.css
+++ b/css/home.css
@@ -146,13 +146,13 @@ section.copy {
   div.row.menu {
     width:100%;
     height:120px;
-    background-color: rgba(200, 201, 192, .75);
+    background-color: rgba(56, 197, 243, .75);
     position:fixed;
     margin-top:0em;
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
-    padding:20px 0;
+    padding:20px 0 40px;
   }
   li.plank{
     line-height:60px;
@@ -161,8 +161,8 @@ section.copy {
     font-weight:800;
     font-size: 4rem;
     letter-spacing: 3px;
-    height:6rem;
-    width:6rem;
+    height:10rem;
+    width:10rem;
     text-align:center;
     float:left;
     margin-right: 7%;
